--- a/src/LanBackup.WebApp/ClientApp/app/components/dashboard/dashboard.component.html
+++ b/src/LanBackup.WebApp/ClientApp/app/components/dashboard/dashboard.component.html
@@ -26,10 +26,10 @@
       <table class="table table-hover table-fixed table-condensed table-striped anyLoadingTable">
         <thead>
           <tr>
-            <th>Computer IP</th>
-            <th>Config ID</th>
+            <th width="10%">Computer IP</th>
+            <th width="25%">Config ID</th>
             <th width="1%"></th>
-            <th width="30%">Status</th>
+            <th width="40%">Status</th>
             <th>Progress</th>
             <th width="15%">Last Report</th>
           </tr>
@@ -39,7 +39,7 @@
           <tr *ngFor="let agent of list | paginate: { id: 'pagedList', itemsPerPage: pageSize, currentPage: currentPage, totalItems: totalPages }">
             <td>{{agent.ip}}</td>
             <td>{{agent.configurationId ? agent.configurationId : '---'}}</td>
-            <td>{{agent.statusType}}</td>
+            <td style="vertical-align:top; text-align:right;"><div class="statusIcon statusIcon_{{agent.statusType}}"></div></td>
             <td>{{agent.statusDescription}}</td>
             <td>
               <!--agent.statusPercent-->
